--- a/index.html
+++ b/index.html
@@ -31,17 +31,13 @@
     </header>
     <div class="container-content">
         <section id="sobre" class="sobre-mim">
-            <div class="flex">
+            <!--<div class="flex">
                 <main class="info">
                     <div class="container-info">
                         <h2>Quem sou?</h2>
                         <p>
                             Catarinense E nascido em 2004, me chamo Matheus Ferretti. Aos quatorze anos fui introduzido à programação geral, sendo o front-end a área que mais chamou minha atenção.
                             Desde então tenho estudado sobre, feito projetos e mantido contato com profissionais da área - sempre com o objetivo de aumentar meus conhecimentos.
-                            <!--Me chamo Matheus Ferretti, sou catarinense nascido em 2004. Desde criança sempre estive em contato com a tecnologia,
-                            jogava videogames e assistia à desenhos animados. Aos 14 anos, durante um curso de informática que eu fazia, fui introduzido
-                            à programação. Nesse momento percebi que o Front-End me chamava muita atenção, decidindo assim, focar nele.
-                            -->
                         </p>
                         <p>
                             No tempo livre costume ler(principalmente Tolkien e filosofia estoica), fazer trilhas, além de ainda jogar algumas coisas do meu interesse.
@@ -53,7 +49,7 @@
                         <img src="../src/images/pfp.jpg">
                     </div>
                 </aside>
-            </div>
+            </div>-->
         </section>
         <div class="container-conhecimentos">
             <section id="conhecimentos" class="conhecimentos">
