--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="container-content">
         <section id="sobre" class="sobre-mim">
-            <!--<div class="flex">
+            <div class="flex">
                 <main class="info">
                     <div class="container-info">
                         <h2>Quem sou?</h2>
@@ -49,7 +49,17 @@
                         <img src="../src/images/pfp.jpg">
                     </div>
                 </aside>
-            </div>-->
+            </div>
+        </section>
+        <section id="sobre-mobile" class="sobre-mim-mobile">
+            <div class="container-info">
+                <center><img src="../src/images/pfp.jpg"></center>
+                <h2>Quem sou?</h2>
+                <p>
+                    Catarinense E nascido em 2004, me chamo Matheus Ferretti. Aos quatorze anos fui introduzido à programação geral, sendo o front-end a área que mais chamou minha atenção.
+                    Desde então tenho estudado sobre, feito projetos e mantido contato com profissionais da área - sempre com o objetivo de aumentar meus conhecimentos.
+                </p>
+            </div>
         </section>
         <div class="container-conhecimentos">
             <section id="conhecimentos" class="conhecimentos">
